bytebase/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bytebase
  namespace: database
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: bytebase
