bytebase/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bytebase
  namespace: database
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: infrastructure
      sectionName: websecure
  hostnames:
    - "db.mikey-liang.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: bytebase
          port: 8080
